Add support for remaining s3 pojos and methods in migration tool (#6049)
* added comments for other method

* more comments for unsupported method and pojo

* fix integration test

* add coverage for two pojos

* another case for SetObjectTaggingRequest added

* support for version added

* deleteObjectsResults comment added

* mapping for lambdaConfiguration added

* typo fixed

* comments for BucketNotificationConfiguration added

* typo fixed

--- a/v2-migration/src/main/resources/META-INF/rewrite/change-s3-methods.yml
+++ b/v2-migration/src/main/resources/META-INF/rewrite/change-s3-methods.yml
@@ -229,3 +229,9 @@ recipeList:
   - org.openrewrite.java.ChangeMethodName:
       methodPattern: com.amazonaws.services.s3.model.SetBucketPolicyRequest withPolicyText(String)
       newMethodName: withPolicy
+  - org.openrewrite.java.ChangeMethodName:
+      methodPattern: com.amazonaws.services.s3.model.BucketPolicy getPolicyText()
+      newMethodName: policy
+  - org.openrewrite.java.ChangeMethodName:
+      methodPattern: com.amazonaws.services.s3.model.VersionListing getVersionSummaries()
+      newMethodName: versions
