--- a/test/s3-tests/pom.xml
+++ b/test/s3-tests/pom.xml
@@ -152,6 +152,11 @@
             <version>${awsjavasdk.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock-jre8</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
