--- a/test/v2-migration-tests/src/test/resources/software/amazon/awssdk/v2migrationtests/maven-en/before/pom.xml
+++ b/test/v2-migration-tests/src/test/resources/software/amazon/awssdk/v2migrationtests/maven-en/before/pom.xml
@@ -45,5 +45,10 @@
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-s3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.12.5</version>
+        </dependency>
     </dependencies>
 </project>
