Save previous version and use in migration tool

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
     <properties>
         <awsjavasdk.version>${project.version}</awsjavasdk.version>
         <awsjavasdk.previous.version>2.31.29</awsjavasdk.previous.version>
+        <awsjavasdk.previous-previous.version>2.31.28</awsjavasdk.previous-previous.version>
         <jackson.version>2.15.2</jackson.version>
         <jackson.databind.version>2.15.2</jackson.databind.version>
         <jacksonjr.version>2.17.3</jacksonjr.version>
