--- a/services/dynamodb/src/main/resources/codegen-resources/dynamodb/customization.config
+++ b/services/dynamodb/src/main/resources/codegen-resources/dynamodb/customization.config
@@ -36,5 +36,6 @@
   "customRetryStrategy" : "software.amazon.awssdk.services.dynamodb.DynamoDbRetryPolicy",
   "enableEndpointDiscoveryMethodRequired": true,
   "enableGenerateCompiledEndpointRules": true,
-  "enableFastUnmarshaller": false
+  "enableFastUnmarshaller": false,
+  "enableEndpointProviderUriCaching": true
 }
