Add initial module for Apache5x for seting up package

--- a/http-clients/pom.xml
+++ b/http-clients/pom.xml
@@ -34,6 +34,7 @@
         <module>aws-crt-client</module>
         <module>netty-nio-client</module>
         <module>url-connection-client</module>
+        <module>apache5-client</module>
     </modules>
 
     <dependencyManagement>
