Switch to plain Jetty server
Unfortunately WireMock saves all the request bodies which increases
memory usage. Use a plain Jetty server that doesn't save requests to
avoid this. We don't rely on any WireWock request assertions so it works
out.

--- a/test/s3-tests/pom.xml
+++ b/test/s3-tests/pom.xml
@@ -153,8 +153,13 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.tomakehurst</groupId>
-            <artifactId>wiremock-jre8</artifactId>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlet</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
