Force s3-tests to run at end

--- a/test/s3-tests/pom.xml
+++ b/test/s3-tests/pom.xml
@@ -162,6 +162,12 @@
             <artifactId>jetty-server</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>bundle-sdk</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
