--- a/test/v2-migration-tests/src/test/resources/software/amazon/awssdk/v2migrationtests/maven-nocompile/after/pom.xml
+++ b/test/v2-migration-tests/src/test/resources/software/amazon/awssdk/v2migrationtests/maven-nocompile/after/pom.xml
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>s3-event-notifications</artifactId>
-            <version>2.31.32</version>
+            <version>V2_VERSION</version>
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
