Added support for s3-event-notifications in migration tool (#6059)
* initial recipe added for s3 event notification

* WIP

* WIP

* test case added and fixed

* getEventNameAsEnum test added

* delete unnecessary method

* comments for DateTime added

* added recipe for getEventTime

* one more method covered

* checkstyle fixed

* updated recipe with tm

* test module merged

* test case fixed

--- a/test/v2-migration-tests/src/test/resources/software/amazon/awssdk/v2migrationtests/maven-nocompile/after/pom.xml
+++ b/test/v2-migration-tests/src/test/resources/software/amazon/awssdk/v2migrationtests/maven-nocompile/after/pom.xml
@@ -48,6 +48,11 @@
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3-event-notifications</artifactId>
+            <version>V2_VERSION</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
             <artifactId>s3-transfer-manager</artifactId>
             <version>V2_VERSION</version>
         </dependency>
