Phase 2 , getting Apache 5 compilation and Junit ready along with clearing Checkstyles and spotbug issues

--- a/http-clients/apache5-client/pom.xml
+++ b/http-clients/apache5-client/pom.xml
@@ -49,6 +49,29 @@
         <version>${awsjavasdk.version}</version>
         <scope>test</scope>
     </dependency>
+    <!-- Added for WIRE logging details while testing-->
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-slf4j-impl</artifactId>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jcl-over-slf4j</artifactId>
+        <scope>test</scope>
+        <version>${slf4j.version}</version>
+    </dependency>
+
     <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter</artifactId>
