--- a/services/s3/pom.xml
+++ b/services/s3/pom.xml
@@ -224,5 +224,17 @@
             <artifactId>jimfs</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>micrometer</artifactId>
+            <version>2.31.41-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+            <version>1.14.5</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
