--- a/observability/micrometer/pom.xml
+++ b/observability/micrometer/pom.xml
@@ -52,6 +52,18 @@
             <version>2.31.41-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+            <version>1.14.5</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>observability-spi</artifactId>
+            <version>2.31.41-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
