Add explicit permissions

--- a/.github/workflows/changelog-verification.yml
+++ b/.github/workflows/changelog-verification.yml
@@ -1,5 +1,9 @@
 name: Changelog verification
 
+permissions:
+  contents: read
+  pull-requests: read
+
 on:
   pull_request:
     types: [ opened, synchronize, reopened, labeled, unlabeled ]
@@ -12,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Check for changelog entry
-        if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-changelog') }}
+        if: ${{ !contains(github.event.pull_request.labels.*.name, 'changelog-not-required') }}
         run: |
           git fetch origin ${{ github.base_ref }} --depth 1 && \
           git diff remotes/origin/${{ github.base_ref }} --name-only | grep -P "\.changes/next-release/*[a-zA-Z0-9_-]+\.json"
@@ -21,5 +25,5 @@ jobs:
         run: |
           echo "::error ::No new/updated changelog entry found in /.changes/next-release directory. Please either:"
           echo "::error ::* Add a changelog entry (see CONTRIBUTING.md for instructions) –or–"
-          echo "::error ::* Add the 'no-changelog' label to this PR (in rare cases not warranting a changelog entry)"
+          echo "::error ::* Add the 'changelog-not-required' label to this PR (in rare cases not warranting a changelog entry)"
           exit 1
