--- a/.github/workflows/api-surface-area-review-verification.yml
+++ b/.github/workflows/api-surface-area-review-verification.yml
@@ -1,5 +1,9 @@
 name: API Surface Area Review Verification
 
+permissions:
+  contents: read
+  pull-requests: read
+
 on:
   pull_request:
     types: [ opened, synchronize, reopened, labeled, unlabeled ]
